# my-first-python-app

./: .gitignore  pyproject.toml
src/: clauses.py  expression_parser.py  fast_api.py  flask_api.py  hello_world.py  models.py  operators.py  parsers.py  py_pg.py  query_builder.py
test/: test_py_pg.py  test_query_builder.py
